cleaning entity names, removed obsolete words like config anddefinitions and replaced with business names
